# nbodysim

./: .gitattributes  Cargo.toml  README.md  build.rs  test.ron
.github/workflows/: ci.yml
examples/: drei-koerper-mond.ron  drei-koerper.ron  two-galaxies-2.ron  two-galaxies.ron  zwei-koerper-1.ron  zwei-koerper-2.ron  zwei-koerper-3.ron
src/: config.rs  galaxygen.rs  main.rs  render.rs  shader.comp  shader.frag  shader.vert
