[package]
name = "nbodysim"
version = "1.0.0"
authors = ["timokoesters <timo@koesters.xyz>"]
edition = "2018"

resolver = "2"

[dependencies]
winit = "0.25.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
cgmath = "0.18.0"
raw-window-handle = "0.3.3"
rand = "0.8.4"
rand_distr = "0.4.1"
ron = "0.6.5"
serde = "1.0.130"
bytemuck = { version = "1.7.2", features = ["derive"] }
tokio = { version = "1.11.0", features = ["rt", "rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"

[build-dependencies]
glsl-to-spirv = "0.1.7"
